envoy-local-gateway.yaml
#### cluster Scope, not use namespace 
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: local-gateway-01
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: local-gateway-01
    namespace: envoy-gateway-system    
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: local-gateway-01
  namespace: envoy-gateway-system
spec:
  gatewayClassName: local-gateway-01
  listeners:
    - name: http
      protocol: HTTP
      port: 80  
      allowedRoutes:
        namespaces:
          from: All        
#    - name: https
#      protocol: HTTPS
#      port: 443  
#      tls:
#        mode: Terminate
#        certificateRefs:
#          - name: envoy-gateway-tls
#            kind: Secret
#      allowedRoutes:
#        namespaces:
#          from: Selector
#          selector:
#            matchLabels:
#              gateway: "gateway-01"
#      allowedRoutes:
#        namespaces:
#          from: All
